# wnf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  crates-io.md  release.json  release.toml  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: audit.yml  beta.yml  ci.yml  clippy.yml  doc.yml  feature-powerset.yml  fmt-check.yml  minimal-versions.yml  miri.yml  msrv.yml  release.yml  test.yml  udeps.yml
devutils/: Cargo.toml
devutils/src/: admin_process.rs  c_wide_string.rs  lib.rs  system_runner.rs  system_tests.rs  util.rs
examples/: README.md  apply.rs  apps_battery.rs  apps_notifications.rs  apps_shell.rs  basic.rs  manage.rs  recipes_apply.rs  recipes_basic.rs  recipes_get_set.rs  recipes_get_set_slice.rs  recipes_info.rs  recipes_manage.rs  recipes_privilege.rs  recipes_privilege_system.rs  recipes_query_update.rs  recipes_replace.rs  recipes_security_system.rs  recipes_slice.rs  recipes_stamped.rs  recipes_state_name_info.rs  recipes_subscribe.rs  recipes_wait_async.rs  recipes_wait_blocking.rs  recipes_wait_until_async.rs  recipes_wait_until_blocking.rs  recipes_wait_until_boxed_async.rs  recipes_wait_until_boxed_blocking.rs  security.rs  slice.rs  stamped.rs  state_name_info.rs  subscribe.rs  wait_blocking.rs  wait_until_async.rs  wait_until_blocking.rs  wait_until_boxed_blocking.rs
src/: apply.rs  buffer.rs  bytes.rs  callback.rs  change_stamp.rs  data.rs  error.rs  info.rs  lib.rs  manage.rs  ntapi.rs  ntdll.rs  ntdll_sys.rs  pod.rs  predicate.rs  privilege.rs  query.rs  raw_state.rs  read.rs  replace.rs  security.rs  state.rs  state_name.rs  subscribe.rs  subscription.rs  type_id.rs  update.rs  util.rs  wait_async.rs  wait_blocking.rs  write.rs
tests/: apply.rs  bytes.rs  inference.rs  info.rs  manage.rs  opaque_data.rs  privilege.rs  privileged.rs  query.rs  replace.rs  security.rs  state.rs  subscribe.rs  system.rs  test.rs  update.rs  wait_async.rs  wait_blocking.rs
testutils/: Cargo.toml
testutils/src/: lib.rs  system_runner.rs  system_tests.rs  temp_file.rs
