[workspace]
resolver = "2"

[package]
name = "wnf"
version = "0.1.0"
edition = "2021"

[features]
bytemuck-v1 = ["dep:bytemuck-v1"]
uuid = ["dep:uuid"]
winapi = ["dep:winapi"]
windows = []
zerocopy = ["dep:zerocopy"]

[dependencies]
bytemuck-v1 = { package = "bytemuck", version = "1.12.0", optional = true }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
tracing = { version = "0.1.34", features = ["log"] }
uuid = { version = "1.1.2", optional = true }
winapi = { version = "0.3.9", optional = true }
zerocopy = { version = "0.6.1", optional = true }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dev-dependencies]
devutils = { path = "devutils" }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }

[[test]]
name = "system"
harness = false