[workspace]

[package]
name = "wnf"
version = "0.1.0"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2021"
rust-version = "1.62" # should be the same as in devutils, docs and MSRV job
description = "Safe Rust bindings for the Windows Notification Facility"
readme = "crates-io.md"
homepage = "https://github.com/matthias-stemmler/wnf"
repository = "https://github.com/matthias-stemmler/wnf"
license = "MIT OR Apache-2.0"
keywords = ["api", "async", "bindings", "ffi", "windows"]
categories = ["api-bindings", "asynchronous", "os::windows-apis"]
include = ["crates-io.md", "LICENSE-APACHE", "LICENSE-MIT", "src/**/*"]

[features]
bytemuck-v1 = ["dep:bytemuck-v1"]
subscribe = []
uuid = ["dep:uuid"]
wait_async = ["subscribe"]
wait_blocking = ["subscribe"]
winapi = ["dep:winapi"]
windows = []
windows-permissions = ["dep:windows-permissions"]
zerocopy = ["dep:zerocopy"]

[dependencies]
bytemuck-v1 = { package = "bytemuck", version = "1", optional = true }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
thiserror = "1"
tracing = { version = "0.1.22", default-features = false, features = ["log"] }
uuid = { version = "1", optional = true }
winapi = { version = "0.3", optional = true }
windows-permissions = { version = "0.2", optional = true }
zerocopy = { version = "0.6", optional = true }

[dependencies.windows]
version = "0.42" # 0.43 has MSRV 1.64
features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dev-dependencies]
crossbeam-channel = "0.5.6"
devutils = { path = "devutils" }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }

[[test]]
name = "system"
harness = false
