[workspace]

[package]
name = "wnf"
version = "0.1.0"
authors = ["Matthias Stemmler <matthias.stemmler@gmail.com>"]
edition = "2021"
rust-version = "1.62" # should be the same as in devutils, docs and MSRV job
description = "Safe bindings for the Windows Notification Facility"
readme = "crates-io.md"
repository = "https://github.com/matthias-stemmler/wnf"
license = "MIT OR Apache-2.0"
keywords = ["api", "async", "bindings", "ffi", "windows"]
categories = ["api-bindings", "asynchronous", "os::windows-apis"]
include = ["crates-io.md", "LICENSE-APACHE", "LICENSE-MIT", "src/**/*"]

[package.metadata.docs.rs]
# build locally: cargo +nightly rustdoc --all-features --target x86_64-pc-windows-msvc --open -- --cfg docsrs
all-features = true
default-target = "x86_64-pc-windows-msvc"
rustdoc-args = ["--cfg", "docsrs"]
targets = ["i686-pc-windows-msvc"]

[features]
bytemuck_v1 = ["dep:bytemuck-v1"]
subscribe = []
uuid = ["dep:uuid"]
wait_async = ["subscribe"]
wait_blocking = ["subscribe"]
winapi = ["dep:winapi"]
windows = []
windows_permissions = ["dep:windows-permissions"]
zerocopy = ["dep:zerocopy"]

[dependencies]
bytemuck-v1 = { package = "bytemuck", version = "1", optional = true }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
thiserror = "1"
tracing = { version = "0.1.24", default-features = false, features = ["log"] }
uuid = { version = "1", optional = true }
winapi = { version = "0.3", optional = true }
windows-permissions = { version = "0.2", optional = true }
zerocopy = { version = "0.6", optional = true }

[dependencies.windows]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dev-dependencies]
async-channel = "1"
bytemuck-v1 = { package = "bytemuck", version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
devutils = { path = "devutils" }
static_assertions = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[test]]
name = "system"
path = "tests/system.rs"
harness = false

[[example]]
name = "apps_battery"
path = "examples/apps_battery.rs"
required-features = ["subscribe"]

[[example]]
name = "apps_notifications"
path = "examples/apps_notifications.rs"
required-features = ["wait_async"]

[[example]]
name = "apps_shell"
path = "examples/apps_shell.rs"
required-features = ["subscribe"]

[[example]]
name = "recipes_subscribe"
path = "examples/recipes_subscribe.rs"
required-features = ["subscribe"]

[[example]]
name = "recipes_wait_async"
path = "examples/recipes_wait_async.rs"
required-features = ["wait_async"]

[[example]]
name = "recipes_wait_blocking"
path = "examples/recipes_wait_blocking.rs"
required-features = ["wait_blocking"]

[[example]]
name = "recipes_wait_until_async"
path = "examples/recipes_wait_until_async.rs"
required-features = ["wait_async"]

[[example]]
name = "recipes_wait_until_blocking"
path = "examples/recipes_wait_until_blocking.rs"
required-features = ["wait_blocking"]

[[example]]
name = "recipes_wait_until_boxed_async"
path = "examples/recipes_wait_until_boxed_async.rs"
required-features = ["wait_async"]

[[example]]
name = "recipes_wait_until_boxed_blocking"
path = "examples/recipes_wait_until_boxed_blocking.rs"
required-features = ["wait_blocking"]
