[package]
name = "devutils"
version = "0.0.0"
edition = "2021"
rust-version = "1.62" # should be the same as in wnf, docs and MSRV job
publish = false

[dependencies]
interprocess = { version = "1.2.1", default-features = false }
libtest-mimic = "0.6"

[dependencies.windows]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]
