[package]
name = "testutils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libtest-mimic = "0.5.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
